# DETA

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deta/: main.py
deta/csv_handler/: csv_handler.py
deta/downloader/: downloader.py
deta/xml_handler/: xml_handler.py
tests/: test_csv_handler.py  test_downloader.py  test_xml_handler.py
