[project]
name = "deta"
version = "0.1.0"
description = "First version of SteelEye's Data Engineer Technical Assignment"
authors = [
    {name = "André Martins"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

